--- a/RecyclerView/app/src/main/res/menu/activity_main_drawer.xml
+++ b/RecyclerView/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,36 +6,36 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Home" />
+            android:icon="@drawable/ic_lightbulb_outline_black_24dp"
+            android:title="யாதவ செய்திகள்" />
         <item
             android:id="@+id/nav_list2"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="List2" />
+            android:icon="@drawable/ic_contacts_black_24dp"
+            android:title="தொடர்புகள்" />
         <item
             android:id="@+id/nav_about_us"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="About Us" />
-        <item
-            android:id="@+id/nav_logout"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Logout" />
+            android:icon="@drawable/ic_group_black_24dp"
+            android:title="எங்களை பற்றி" />
         <item
             android:id="@+id/nav_manage"
             android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:title="அமைப்புகள்" />
+        <item
+            android:id="@+id/nav_logout"
+            android:icon="@drawable/ic_flight_takeoff_black_24dp"
+            android:title="வெளியேறு" />
     </group>
 
-    <item android:title="Communicate">
+    <item android:title="தொடர்பு விவரங்கள்">
         <menu>
             <item
                 android:id="@+id/nav_share"
                 android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
+                android:title="பகிர்க" />
             <item
                 android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
+                android:icon="@drawable/ic_phone_black_24dp"
+                android:title="தொடர்பு கொள்க" />
         </menu>
     </item>
 
