--- a/RecyclerView_OLD/app/src/main/res/layout/content_details.xml
+++ b/RecyclerView_OLD/app/src/main/res/layout/content_details.xml
@@ -7,26 +7,26 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.bbcafe.community.DetailsActivity"
     tools:showIn="@layout/activity_details">
-
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginBottom="15dp"
         android:orientation="vertical" >
 
     <android.support.v7.widget.AppCompatImageView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginStart="4dp"
-        android:padding="5dp"
+        android:layout_height="wrap_content"
+        android:padding="2dp"
         android:layout_gravity="center"
         android:id="@+id/shopimage"/>
     <android.support.v7.widget.AppCompatTextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:drawableLeft="@drawable/ic_business_black_24dp"
-        android:layout_marginStart="5dp"
         android:padding="10dp"
         android:textSize="24sp"
         android:id="@+id/shopname"/>
@@ -34,55 +34,73 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:drawableLeft="@drawable/ic_person_outline_black_24dp"
-        android:layout_marginStart="5dp"
         android:padding="10dp"
         android:textSize="16sp"
         android:id="@+id/ownername"/>
 
     <TextView
         android:id="@+id/phone"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:autoLink="phone"
         android:drawableLeft="@drawable/ic_phone_black_24dp"
-        android:layout_marginStart="5dp"
         android:padding="10dp"
         android:textSize="16sp"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:autoLink="phone"
+        android:padding="10dp"
+        android:textSize="16sp"
+        android:drawableLeft="@drawable/ic_ring_volume_black_24dp"
+        android:id="@+id/landLine"/>
     <TextView
         android:id="@+id/address"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:drawableLeft="@drawable/ic_location_on_black_24dp"
-        android:layout_marginStart="5dp"
         android:padding="10dp"
         android:textSize="16sp"/>
     <TextView
             android:id="@+id/addr2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginLeft="18dp"
+            android:paddingLeft="18dp"
             android:textSize="16sp"/>
     <TextView
             android:id="@+id/city"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
             android:paddingLeft="18dp"
             android:textSize="16sp"/>
     <TextView
             android:id="@+id/pin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
             android:paddingLeft="18dp"
             android:textSize="16sp"/>
+    <TextView
+            android:id="@+id/newsborder2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:layout_margin="2dp"
+            android:background="@drawable/border_top_bottom" />
+    <TextView
+            android:id="@+id/sharelbl"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="இந்த விபரங்களை பகிர:"
+            android:paddingLeft="18dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:textSize="18sp"/>
     <Button
             android:id="@+id/share"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-        android:background="@drawable/ic_menu_share"
-             />
+            android:layout_marginLeft="20dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:background="@drawable/ic_menu_share"/>
     </LinearLayout>
-
+</ScrollView>
 </android.support.constraint.ConstraintLayout>
