--- a/RecyclerView_OLD/app/src/main/res/layout/list_item.xml
+++ b/RecyclerView_OLD/app/src/main/res/layout/list_item.xml
@@ -9,8 +9,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
-        android:layout_marginBottom="2dp"
         android:orientation="horizontal" >
 
         <android.support.v7.widget.AppCompatImageView
@@ -29,8 +27,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
-                android:padding="18dp"
-                android:textSize="24sp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:textSize="16sp"
                 android:id="@+id/title"/>
 
         </LinearLayout>
