--- a/RecyclerView_OLD/app/src/main/res/layout/content_details.xml
+++ b/RecyclerView_OLD/app/src/main/res/layout/content_details.xml
@@ -7,100 +7,123 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.bbcafe.community.DetailsActivity"
     tools:showIn="@layout/activity_details">
+
     <ScrollView
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
-    <LinearLayout
-        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="1dp"
-        android:layout_marginBottom="15dp"
-        android:orientation="vertical" >
+        tools:layout_editor_absoluteX="101dp"
+        tools:layout_editor_absoluteY="3dp">
 
-    <android.support.v7.widget.AppCompatImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="2dp"
-        android:layout_gravity="center"
-        android:id="@+id/shopimage"/>
-    <android.support.v7.widget.AppCompatTextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:drawableLeft="@drawable/ic_business_black_24dp"
-        android:padding="10dp"
-        android:textSize="24sp"
-        android:id="@+id/shopname"/>
-    <android.support.v7.widget.AppCompatTextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:drawableLeft="@drawable/ic_person_outline_black_24dp"
-        android:padding="10dp"
-        android:textSize="16sp"
-        android:id="@+id/ownername"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp"
+            android:layout_marginTop="1dp"
+            android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/phone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:autoLink="phone"
-        android:drawableLeft="@drawable/ic_phone_black_24dp"
-        android:padding="10dp"
-        android:textSize="16sp"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:autoLink="phone"
-        android:padding="10dp"
-        android:textSize="16sp"
-        android:drawableLeft="@drawable/ic_ring_volume_black_24dp"
-        android:id="@+id/landLine"/>
-    <TextView
-        android:id="@+id/address"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:drawableLeft="@drawable/ic_location_on_black_24dp"
-        android:padding="10dp"
-        android:textSize="16sp"/>
-    <TextView
-            android:id="@+id/addr2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="18dp"
-            android:textSize="16sp"/>
-    <TextView
-            android:id="@+id/city"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="18dp"
-            android:textSize="16sp"/>
-    <TextView
-            android:id="@+id/pin"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="18dp"
-            android:textSize="16sp"/>
-    <TextView
-            android:id="@+id/newsborder2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="5dp"
-            android:layout_margin="2dp"
-            android:background="@drawable/border_top_bottom" />
-    <TextView
-            android:id="@+id/sharelbl"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="இந்த விபரங்களை பகிர:"
-            android:paddingLeft="18dp"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp"
-            android:textSize="18sp"/>
-    <Button
-            android:id="@+id/share"
-            android:layout_marginLeft="20dp"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:background="@drawable/ic_menu_share"/>
-    </LinearLayout>
-</ScrollView>
+            <android.support.v7.widget.AppCompatImageView
+                android:id="@+id/shopimage"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:padding="2dp" />
+
+            <android.support.v7.widget.AppCompatTextView
+                android:id="@+id/shopname"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/ic_business_black_24dp"
+                android:padding="10dp"
+                android:textSize="24sp" />
+
+            <android.support.v7.widget.AppCompatTextView
+                android:id="@+id/ownername"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/ic_person_outline_black_24dp"
+                android:padding="10dp"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/phone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:autoLink="phone"
+                android:drawableLeft="@drawable/ic_phone_black_24dp"
+                android:padding="10dp"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/landLine"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:autoLink="phone"
+                android:drawableLeft="@drawable/ic_ring_volume_black_24dp"
+                android:padding="10dp"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/address"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/ic_location_on_black_24dp"
+                android:padding="10dp"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/addr2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="18dp"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/city"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="18dp"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/pin"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingLeft="18dp"
+                android:textSize="16sp" />
+
+            <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/adView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                ads:adSize="BANNER"
+                ads:adUnitId="ca-app-pub-3940256099942544/6300978111"></com.google.android.gms.ads.AdView>
+
+            <TextView
+                android:id="@+id/newsborder2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:background="@drawable/border_top_bottom"
+                android:padding="5dp" />
+
+            <TextView
+                android:id="@+id/sharelbl"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="5dp"
+                android:paddingLeft="18dp"
+                android:paddingTop="5dp"
+                android:text="இந்த விபரங்களை பகிர:"
+                android:textSize="18sp" />
+
+            <Button
+                android:id="@+id/share"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_marginLeft="20dp"
+                android:background="@drawable/ic_menu_share" />
+        </LinearLayout>
+    </ScrollView>
 </android.support.constraint.ConstraintLayout>
