--- a/RecyclerView_OLD/app/src/main/res/layout/content_details.xml
+++ b/RecyclerView_OLD/app/src/main/res/layout/content_details.xml
@@ -97,6 +97,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
+                android:layout_marginLeft="18dp"
                 ads:adSize="BANNER"
                 ads:adUnitId="ca-app-pub-3940256099942544/6300978111"></com.google.android.gms.ads.AdView>
 
