--- a/RecyclerView_OLD/app/src/main/res/layout/content_html_content.xml
+++ b/RecyclerView_OLD/app/src/main/res/layout/content_html_content.xml
@@ -7,32 +7,75 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".HtmlContent"
     tools:showIn="@layout/activity_html_content">
+
     <ScrollView
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        tools:layout_editor_absoluteX="41dp"
+        tools:layout_editor_absoluteY="0dp">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="1dp"
             android:layout_marginBottom="15dp"
+            android:layout_marginTop="1dp"
             android:orientation="vertical">
+
             <TextView
                 android:id="@+id/content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="10dp"
-                android:textSize="18sp"
-                android:text="TextView" />
-            <com.google.android.gms.ads.AdView
-                xmlns:ads="http://schemas.android.com/apk/res-auto"
+                android:text="TextView"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/newsborder2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:background="@drawable/border_top_bottom" />
+
+            <TextView
+                android:id="@+id/watsappLbl"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:textColor="@android:color/black"
+                android:textSize="18sp" />
+
+            <ImageButton
+                android:id="@+id/whatsapp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:background="@drawable/whatsapp"
+                android:focusable="true"
+                android:layout_margin="10dp"
+                android:text="Button" />
+            <ImageButton
+                android:id="@+id/businessUrl"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:background="@drawable/ic_create_black_24dp"
+                android:focusable="true"
+                android:layout_margin="10dp"
+                android:text="Button" />
+            <TextView
+                android:id="@+id/newsborder3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:background="@drawable/border_top_bottom" />
+
+            <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/adView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
                 android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:layout_margin="10dp"
                 ads:adSize="BANNER"
-                ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
-            </com.google.android.gms.ads.AdView>
+                ads:adUnitId="ca-app-pub-3940256099942544/6300978111"></com.google.android.gms.ads.AdView>
         </LinearLayout>
     </ScrollView>
 </android.support.constraint.ConstraintLayout>
