--- a/RecyclerView_OLD/app/src/main/res/layout/content_news_details.xml
+++ b/RecyclerView_OLD/app/src/main/res/layout/content_news_details.xml
@@ -29,6 +29,7 @@
             android:id="@+id/adView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             android:layout_centerHorizontal="true"
             android:layout_alignParentBottom="true"
             ads:adSize="BANNER"
